--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -61,9 +61,83 @@ li a:hover, .exit a:hover {
 
 /* Form */
 form {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px 20px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  background: #fff;
 }
+
+.consult {
+  grid-column: 1 / -1;      
+  justify-self: center;     
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #0d6efd;
+  margin-bottom: 20px;
+}
+
+
+form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+form input,
+form select {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+}
+
+.full-line {
+  grid-column: 1 / 3;
+  margin-bottom: -50px;
+}
+
+#genero {
+  grid-column: 1 / 2;
+}
+
+
+#data {
+  grid-column: 2 / 3;
+}
+
+form button {
+  grid-column: 1 / -1;
+  height: 50px;
+  font-size: 20px;          
+  justify-self: center;           
+  padding: 6px 25px;               
+  font-size: 14px;             
+  font-weight: 500;
+  color: #fff;
+  background-color: #0d6efd;      
+  border: none;                    
+  border-radius: 20px;             
+  cursor: pointer;
+  transition: background-color 0.15s ease-in-out;
+}
+
+form button:hover {
+  background-color: #0b5ed7;       
+}
+
+form input:focus,
+form select:focus {
+  outline: none;
+  border-color: #0d6efd;
+  box-shadow: 0 0 6px rgba(13, 110, 253, 0.3);
+  transition: 0.3s;
+}
+
+
